# NutritionOptmizer

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: constraints.json  nutrients.json  presets.json
notebooks/: notebook.py
scripts/: 1_dl_data.py  2_clean_data.py
src/food_optimizer/: optimizer.py
