[project]
name = "food-optimizer"
version = "0.1.0"
description = "Nutrition optimizer using CVXPY and USDA data"
authors = [
    {name = "Alexander Karolin"},
]
dependencies = [
    "cvxpy>=1.4.0",
    "pandas>=2.0.0",
    "marimo>=0.1.0",
    "scipy>=1.10.0",
    "pyarrow>=14.0.0",
    "altair>=5.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
